[package]
name = "rust_chain"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
mongodb = "3.2.3"
bson = "2.14"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
tower = { version = "0.5.2", features = ["full"]} 
tower-http = { version = "0.6.2", features = ["full"] }
async-trait = "0.1.88"
chrono = "0.4.38"
config = "0.15.11"
mockall = "0.13.0"
secp256k1 = { version = "0.30", features = ["rand", "hashes"] }
sha2 = "0.10.8"
rand = "0.9.0"
hex = "0.4"
k256 = "0.13.4"